<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_decision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="112377633+SnapPython@users.noreply.github.com">mechax</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>rm_decision_interfaces</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
